# ollamatoolkit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  run_tests.py  sample_config.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: cursor-setup.md
docs/agent-skills/: README.md  antigravity.md  claude-code.md  copilot.md  cursor.md  gemini-cli.md  getting-started.md  kiro.md  opencode.md  windsurf.md
examples/: 01_basic_chat.py  02_with_tools.py  03_vision_ocr.py  04_rag_pipeline.py  05_multi_agent_team.py  06_streaming_ui.py  07_schema_cache.py  08_email_tools.py  09_tool_registry.py  README.md
scripts/: install-agent-skills.ps1  install-agent-skills.sh  install-cursor-skills.ps1
skills/ollamatoolkit/: SKILL.md
src/ollamatoolkit/: __init__.py  _version.py  agent.py  callbacks.py  cli.py  client.py  config.py  connector.py  dashboard.py  exceptions.py  extractor.py  openai_types.py  telemetry.py  tool_registry.py  types.py  utils.py
src/ollamatoolkit/agents/: __init__.py  memory.py  role.py  simple.py  team.py
src/ollamatoolkit/client_api/: __init__.py  async_client.py  common.py  inference.py  models.py  openai_compat.py  sync_client.py  transport.py  web.py
src/ollamatoolkit/common/: utils.py
src/ollamatoolkit/config/: __init__.py  core.py  presets.py
src/ollamatoolkit/models/: __init__.py  inventory.py  selector.py
src/ollamatoolkit/tools/: __init__.py  benchmark.py  cache.py  db.py  document.py  email.py  files.py  math.py  mcp.py  models.py  pdf.py  schema.py  server.py  system.py  system_health.py  vector.py  web.py
src/ollamatoolkit/tools/vision/: __init__.py  analysis.py  metadata.py  ocr.py  spatial.py  tiling.py  (+1 more)
test_input_samples/: web.html
tests/: __init__.py  conftest.py  test_cli_models.py  test_client.py  test_client_openai_compat.py  test_client_stream_events.py  test_comprehensive.py  test_config.py  test_connector.py  test_live_ollama_integration.py  test_model_selector_enhancements.py  test_thorough.py  test_types.py  test_version.py
